--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,48 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden; /* Remove horizontal scrollbar */
 }
 
-h1{
+h1 {
   margin: 0;
 }
 
-.header{
+.header {
   background-color: #273c75;
-  padding: 10px;
+  padding: 20px;
   color: #f5f6fa;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.form{
+.header h1 {
+  margin: 0;
+  font-size: 24px;
+}
+
+.header p {
+  margin: 0;
+  font-size: 16px;
+  color: #f5f6fa;
+  opacity: 0.8;
+  margin-left: 10px;
+}
+
+.form {
   margin-top: 20px;
 }
 
-.data{
+.data {
   margin-top: 20px;
   width: 100%;
   display: flex;
@@ -28,17 +50,12 @@ h1{
   align-items: center;
 }
 
-.data_val{
+.data_val {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 60%;
-  box-shadow: rgba(0, 0, 0, .1) 0 1px 2px 0;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 2px 0;
   box-sizing: border-box;
   padding: 0px 9px 0px 9px;
-  
 }
-
-
-
-
